Fix hr spacing

--- a/css/master.css
+++ b/css/master.css
@@ -75,6 +75,7 @@ body {
 hr {
     margin-top: 50px;
     margin-bottom: 50px;
+    margin-right: 5%;
     border-color: #8e784c;
 }
 
